[package]
name = "quadtris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.25"
egui-macroquad = "0.12.0"
rust_tetris_core = { path = "rust_tetris_core" }
lazy_static = "1.4.0"
quad-storage = "0.1.3"
nanoserde = "0.1.32"
macroquad_asset_loader = { path = "macroquad_asset_loader" }

[workspace]
members = ['rust_tetris_core']

[profile.release]
opt-level = 's'
